--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@xenova/transformers": "^2.17.2",
     "dotenv": "^17.2.3",
     "electron-squirrel-startup": "^1.0.1",
+    "netlify-identity-widget": "^1.9.2",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "update-electron-app": "^3.0.0"
